2005-09-08  Pete's account  <Peter.Richardson@durham.ac.uk>

	* Decay/Baryon/SU3BaryonDecupletOctetPhotonDecayer.cc (Repository): various minor bug fixes to the decays

2005-09-08  David Grellscheid  <dgrell@d2.phyip3.dur.ac.uk>

	* lib/Makefile.am: added libHwPartonicDecay.la to the list of libraries

2005-09-05  Pete's account  <Peter.Richardson@durham.ac.uk>

	* Utilities/HerwigRun.cc: changes to documentation to remove some doxygen errors and more changes due to change in random numbers from ThePEG

2005-09-04  Pete's account  <Peter.Richardson@durham.ac.uk>

	* Doc/tagfileThePEG.tag (Repository): changes to documentation so that include is not scanned by doxygen and duplicate base classes do not appear

	* Utilities/Kinematics.cc (Repository): Changes for the changes to random numbers from ThePEG and improvements to documentation

2005-09-01  Pete's account  <Peter.Richardson@durham.ac.uk>

	* Decay/HwDecayHandler.icc (Repository): changes to partonic decays

2005-09-01  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Decay/Partonic/BtoSGammaDecayer.fh (Repository): added new partonic decayers for b to s gamma and weak partonic decays

2005-09-01  Peter Richardson <Peter.Richardson@durham.ac.uk>

	* Hadronization/PartonicHadronizer.h (Repository): added new class for hadronization of partonic b and c decays.

	* Hadronization/PartonSplitter.h (Repository): changes to the hadronization to ensure only the taggws particles are hadronized.

	* PDT/GenericWidthGenerator.icc (Repository): S->VV shape and naive running width option added

	* Decay/ScalarMeson/PScalarVectorFermionsDecayer.cc (Repository): various minor fixes to the decay classes.

	* Decay/ScalarMeson/ScalarVectorVectorDecayer.icc (Repository): added new decayer for S -> VV

2005-09-01  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Decay/Partonic (Repository): added files for b to s gamma hadronic mass spectra

2005-09-01  Peter Richardson  <Peter.Richardson@durham.ac.uk>
