@@ -12,6 +12,7 @@ create Herwig++::ClusterFissioner theClusterFissioner
 create Herwig++::LightClusterDecayer theLightClusterDecayer
 create Herwig++::ClusterDecayer theClusterDecayer
 create Herwig++::HadronSelector theHadronSelector
+create Herwig++::PartonicHadronizer PartonicHadronizer
 # Set default values
 set stdCluHadHandler:GlobalParameters /Defaults/theGlobalParameters
 set stdCluHadHandler:PartonSplitter thePartonSplitter
@@ -26,6 +27,13 @@ set theLightClusterDecayer:HadronSelector theHadronSelector
 set theClusterDecayer:HadronSelector theHadronSelector
 set theClusterDecayer:GlobalParameters /Defaults/theGlobalParameters
 set thePartonSplitter:GlobalParameters /Defaults/theGlobalParameters
+set PartonicHadronizer:GlobalParameters /Defaults/theGlobalParameters
+set PartonicHadronizer:PartonSplitter thePartonSplitter
+set PartonicHadronizer:ClusterFinder theClusterFinder
+set PartonicHadronizer:ColourReconnector theColourReconnector
+set PartonicHadronizer:ClusterFissioner theClusterFissioner
+set PartonicHadronizer:LightClusterDecayer theLightClusterDecayer
+set PartonicHadronizer:ClusterDecayer theClusterDecayer
 #
 cd /Defaults/Handlers/Hadronization/Cluster
 set theColourReconnector:ClReco 0
@@ -48,3 +56,4 @@ set theHadronSelector:PwtDIquark 0.55
 set theHadronSelector:SngWt      1.0
 set theHadronSelector:DecWt      0.7
 set theHadronSelector:DKMode 2
+
